--- a/Kyt.company-main/Kyt.company/index.html
+++ b/Kyt.company-main/Kyt.company/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <img src="backgrond-img.png" class="background" alt="backgrond-img">
-    <div class="logo-div"><img class="logo-img" src="logo.png" alt=""></div>
+    <div class="logo-div"><img class="logo-img" src="img/logo.png" alt=""></div>
     <div class="flat-div">
         <div class="flat">
-            <img class="img-flat" src="flat-1.png" alt="">
+            <img class="img-flat" src="img/flat-1.png" alt="">
             <p class="qq">
             <br> 1-комнатная <br><br>
                 <hr noshade class="line">
@@ -29,7 +29,7 @@
             <button class="button">Рассчитать</button>
         </div>
         <div class="flat">
-            <img src="flat-2.png" alt="">
+            <img src="img/flat-2.png" alt="">
             <p class="qq">
                 <br> 2-комнатная <br><br>  
                 <hr noshade class="line">
@@ -41,7 +41,7 @@
                 <button class="button">Рассчитать</button>
         </div>
         <div class="flat">
-            <img src="flat-3.png" alt="">
+            <img src="img/flat-3.png" alt="">
             <p class="qq">
                 <br> 3-комнатная <br><br>
                 <hr noshade class="line">
